--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
 language: java
+jdk:
+  - openjdk8
+install:
+  - mvn clean install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 after_success:
+  - mvn clean test jacoco:report
   - bash <(curl -s https://codecov.io/bash)
